[FIX] web_editor: properly display colorpickers in all languages
Before this commit, the tab labels of the colorpickers were too long
in some languages (e.g. German) making them overflow and making the UI
impossible to use in some cases. Indeed, the bug was different depending
on where the colorpicker was:

- In the text tools, the colorpicker overflew the whole panel, making it
  impossible to use

- In the snippet options, the colorpicker buttons were cropped without
  ellipsis making them impossible to read

- In the backend, as the toolbar is floating, it was ok but the code was
  quite dependent of the other colorpicker-related scss

This commit solves those problems and unifies the way colorpickers look
independently of their position (always full width, the buttons fill the
available space, if the buttons are too long they are cropped with
ellipsis, they have a title on hover and are always aligned on the
left of the tabs area).

opw-2786778

X-original-commit: a4755218f239e5c00e9c6a23321654a3ab029470

--- a/addons/web_editor/static/src/scss/wysiwyg_snippets.scss
+++ b/addons/web_editor/static/src/scss/wysiwyg_snippets.scss
@@ -176,16 +176,17 @@ body.editor_enable.editor_has_snippets {
 
 %we-generic-tab-button {
     @extend %we-generic-link;
-    @include o-text-overflow(inline-flex);
+    display: inline-flex;
     flex: 1 1 auto;
     justify-content: center;
+    min-width: 0;
     border: none;
     background-color: transparent;
     color: inherit;
     font-weight: normal;
 
     > span {
-        display: inline-block;
+        @include o-text-overflow(inline-block);
         $-r: $o-we-sidebar-tabs-size-ratio;
         padding: (0.6em * $-r) (0.4em * $-r) (0.5em * $-r);
     }
@@ -576,6 +577,7 @@ body.editor_enable.editor_has_snippets {
             }
 
             #colorInputButtonGroup {
+                position: static;
                 grid-area: colors;
 
                 .dropdown-toggle:after {
@@ -585,7 +587,7 @@ body.editor_enable.editor_has_snippets {
                 .colorpicker-group {
                     display: flex;
                     align-items: stretch;
-                    position: initial;
+                    position: static;
                 }
 
                 #oe-text-color {
@@ -667,12 +669,17 @@ body.editor_enable.editor_has_snippets {
             }
 
             .dropdown-menu.colorpicker-menu {
+                min-width: 0;
                 max-height: none;
-                left: auto;
-                right: 0;
+                left: $o-we-sidebar-content-indent;
+                right: $o-we-sidebar-content-padding-base;
                 border: $o-we-sidebar-content-field-dropdown-border-width solid $o-we-sidebar-content-field-dropdown-border-color;
                 border-radius: $o-we-item-border-radius;
                 padding: 0;
+            }
+
+            :not(.dropup) > .dropdown-menu.colorpicker-menu {
+                top: 2em; // TODO Ugly and not precise, conflict with row-gap of grid
             }
         }
 
@@ -1745,6 +1752,7 @@ body.editor_enable.editor_has_snippets {
 
     .o_we_colorpicker_switch_pane_btn {
         @extend %we-generic-tab-button;
+        flex: 0 1 auto;
     }
     .o_colorpicker_reset {
         @extend %we-generic-button;
